Bug 490003: Take outer <svg> element's border and padding into account, for invalidation and hit-testing. r=roc